--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   --lg-font: "Kaisei Tokumin", serif;
   --sm-font: "Poppins", sans-serif;
   --blue: rgb(43, 181, 223);
+  --header-height:75px;
 }
 body {
   font-family: var(--sm-font);
@@ -49,6 +50,7 @@ body {
   background-color: rgba(0, 0, 0, 0.384) !important;
   -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+  height: var(--header-height);
 }
 .navbar-brand img {
   width: 30px;
@@ -72,44 +74,22 @@ body {
   border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
 }
 
-/* header */
-header {
-  /* height: 500px; */
-  height: 100vh;
-}
-.carousel-inner {
-  height: 100%;
-  width: 100%;
-}
-.carousel-item {
-  height: 100%;
-  width: 100%;
-}
-.carousel-item img {
-  /* object-fit: fill; */
-  /* height: 100%; */
-  /* width: 100%; */
-}
-.carousel-caption {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  /* width: 100%; */
-  transform: translate(-50%, -50%);
-  z-index: 20;
-  color: white;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+/* hero */
+#hero {
+  background-image: url(/images//header3.jpg);
+  height: 100vh;  
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.carousel-inner h1 {
-  font-size: 60px;
-  font-family: var(--lg-font);
-}
-.carousel-item .btn {
-  border-color: #fff !important;
-}
-.carousel-item .btn:hover {
-  border-color: var(--blue) !important;
+.hero-text-btn-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .d-none {
